# neonx

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  redirect.html  test-deployment.html
assets/css/: styles.css
assets/js/: main.js
telegram-bot/: Dockerfile  README.md  alerts_manager.py  community_manager.py  deploy.sh  neonx_bot.py  neonx_bot_enhanced.py  neonx_bot_http.py  neonx_bot_minimal.py  neonx_bot_nojobs.py  neonx_bot_old.py  neonx_bot_simple.py  neonx_bot_v2.py  neonxbot.service  price_fetcher.py  price_tracker.py  requirements.txt  requirements_new.txt  setup_commands.txt
website/: index-new.html  index-simple.html  index.html  redirect-mexc.html  redirect-pump.html
website/css/: styles.css
website/js/: main.js
